<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_eight_imgs"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/graycc"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/ll_dot"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btn_Player"
        android:layout_width="66dp"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_play"
        android:gravity="center"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/graycc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_round" />

        <TextView
            android:id="@+id/tx_eight_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/play_title"
            android:textColor="@color/blue37"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_operate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/play_content"
        android:textColor="@color/gray"
        android:textSize="12sp" />
    <!--
    光线感应： 设置，显示， 自动调节亮度
    色温：


    -->

</LinearLayout>
